# twitterclone

./: .gitignore  README.md  pyproject.toml
authentication/: forms.py  urls.py  views.py
notification/: models.py  urls.py  views.py
notification/migrations/: 0001_initial.py  0002_auto_20200529_1355.py
templates/: addtweet.html  genericform.html  index.html  notifications.html  profile.html  signup.html  tweet.html
tweet/: forms.py  models.py  urls.py  views.py
tweet/migrations/: 0001_initial.py  0002_tweet_date.py  0003_auto_20200527_1413.py  0004_auto_20200527_1419.py
twitterclone/: settings.py  urls.py
twitteruser/: admin.py  models.py  urls.py  views.py
twitteruser/migrations/: 0001_initial.py
