[tool.poetry]
name = "twitterclone"
version = "0.1.0"
description = ""
authors = ["Sean Bailey <sepabailey@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
django = "^3.0.6"

[tool.poetry.dev-dependencies]
flake8 = "^3.8.2"
autopep8 = "^1.5.2"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
